--- a/templates/programari.html
+++ b/templates/programari.html
@@ -1,10 +1,236 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ro">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Programări</title>
+
+    <title>Tabel Programări</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Readex+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+
+
+    <script>
+        $(document).ready(function () {
+            $('#programari_table').DataTable(
+                {
+                    pageLength: 10,
+                    "language": {
+                        "decimal": ",",
+                        "emptyTable": "Nu există date în tabel",
+                        "info": "Se afișează de la _START_ la _END_ din _TOTAL_ programări",
+                        "infoEmpty": "Se afișează 0 programări",
+                        "infoFiltered": "(selectate dintr-un total de _MAX_)",
+                        "infoPostFix": "",
+                        "thousands": ".",
+                        "lengthMenu": "Afișează _MENU_ programări/pagină",
+                        "loadingRecords": "Se încarcă...",
+                        "processing": "Se procesează...",
+                        "search": "Căutare:",
+                        "zeroRecords": "Nu s-a găsit nicio programare",
+                        "paginate": {
+                            "first": "Prima",
+                            "last": "Ultima",
+                            "next": "Înainte",
+                            "previous": "Înapoi"
+                        }
+                    }
+                }
+            );
+        });
+    </script>
+
 </head>
+
 <body>
-<a href="{% url 'index' %}">Home</a>
+
+<div class="m-4 title">
+    Programări
+</div>
+
+<div class="container">
+    <div class="row">
+
+        <div class="col-sm text-center">
+            <button type="submit" class="btn btn-primary btn-lg m-2 fix-button" data-bs-toggle="modal" data-bs-target="#programari_update_modal">
+                Modifică o programare
+            </button>
+        </div>
+
+        <div class="col-sm text-center menu">
+            <button class="btn btn-primary btn-lg m-2 fix-button" onclick="location.href='{% url 'index' %}';" value="Home">
+                Home
+            </button>
+        </div>
+
+        <div class="col-sm text-center">
+            <button type="submit" class="btn btn-primary btn-lg m-2 fix-button" data-bs-toggle="modal" data-bs-target="#programari_delete_modal">
+                Șterge o programare
+            </button>
+        </div>
+    </div>
+</div>
+
+<!-- Programări Update Modal -->
+<div class="modal fade" id="programari_update_modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+     aria-labelledby="programari_update_modal_label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="programari_update_modal_label">Modifică o programare</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form autocomplete="on" action="Programari" method="POST">
+                <div class="modal-body">
+
+                    <div class="row g-3">
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <select type="text" class="form-control" name="Select_programare_Update" aria-label="Programare"
+                                        id="Select_programare_Update">
+                                    {% for programare in programari %}
+                                        <option value="{{ programare.id_programare }}">{{ programare.represent }}</option>
+                                    {% endfor %}
+                                </select>
+                                <label for="Select_programare_Update">Programare</label>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" name="Oras_update" placeholder="Oraș" aria-label="Oraș" id="Oras_update"
+                                       maxlength="20" pattern="[A-Z]{1}.*">
+                                <label for="Oras_update">Oraș</label>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" name="Locatie_update" placeholder="Locație" aria-label="Locație"
+                                       id="Locatie_update" maxlength="50" pattern="[A-Z]{1}.*">
+                                <label for="Locatie_update">Locație</label>
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" name="Sala_update" placeholder="Sala" aria-label="Sala" id="Sala_update"
+                                       maxlength="10" pattern="[A-Z]{1}.*">
+                                <label for="Sala_update">Sala</label>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="date" class="form-control" name="Data_update" placeholder="Data" aria-label="Data" id="Data_update">
+                                <label for="Data_update">Data</label>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="time" class="form-control" name="Ora_update" placeholder="Ora" aria-label="Ora" id="Ora_update">
+                                <label for="Ora_update">Ora</label>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Închide</button>
+                    <button type="submit" class="btn btn-primary" name="updateProgramare">Modifică</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!-- Programări Delete Modal -->
+<div class="modal fade" id="programari_delete_modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+     aria-labelledby="programari_delete_modal_label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="programari_delete_modal_label">Șterge o programare</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form autocomplete="on" action="Programari" method="POST">
+                <div class="modal-body">
+
+                    <div class="row g-3">
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <select type="text" class="form-control" name="Select_programare_Delete" aria-label="Select programare"
+                                        id="Select_programare_Delete">
+                                    {% for programare in programari %}
+                                        <option value="{{ programare.id_programare }}">{{ programare.represent }}</option>
+                                    {% endfor %}
+                                </select>
+                                <label for="Select_programare_Delete">Programare</label>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Închide</button>
+                    <button type="submit" class="btn btn-primary" name="deleteProgramare">Șterge</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<div class="m-5">
+    <table id="programari_table" class="table table-striped cell-border">
+        <thead>
+        <tr class="table-dark text-center align-middle">
+            <th scope="col">Număr</th>
+            <th scope="col">Materie juridică</th>
+            <th scope="col">Stadiu procesual</th>
+            <th scope="col">Obiect</th>
+            <th scope="col">Nume</th>
+            <th scope="col">Email</th>
+            <th scope="col">Telefon</th>
+            <th scope="col">Oraș</th>
+            <th scope="col">Locație</th>
+            <th scope="col">Sala</th>
+            <th scope="col">Data</th>
+            <th scope="col">Ora</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        {% for programare in programari %}
+            <tr class="align-middle">
+                <td class="text-center">{{ programare.proces.numar }}</td>
+                <td class="text-center">{{ programare.proces.materie_juridica }}</td>
+                <td class="text-center">{{ programare.proces.stadiu_procesual }}</td>
+                <td>{{ programare.proces.obiect }}</td>
+                <td class="text-center">{{ programare.judecator.nume_complet }}</td>
+                <td class="text-center">{{ programare.judecator.email }}</td>
+                <td class="text-center">{{ programare.judecator.telefon }}</td>
+                <td>{{ programare.oras }}</td>
+                <td>{{ programare.locatie }}</td>
+                <td class="text-center">{{ programare.sala }}</td>
+                <td class="text-center">{{ programare.data }}</td>
+                <td class="text-center">{{ programare.ora }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
+
 </body>
+
 </html>
